src/objects/ContractDeviceAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Device_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract_Device External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Devices</relationshipLabel>
        <relationshipName>R00N40000001hQAXEA2</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N40000001hQDHEA2</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead_Device__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Device</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Device</label>
    <nameField>
        <displayFormat>ContDev-{0000}</displayFormat>
        <label>Contract Device Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Devices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>